# nomad_api

./: README.md  pyproject.toml
examples/: config.py  event_stream.py  jobs.py  pyproject.toml
nomad/: __init__.py  client.py
nomad/models/: __init__.py  allocation.py  constraint.py  deployment.py  evaluation.py  event_stream.py  job.py  node.py  resource.py  service.py  task.py
tests/: test_jobs.py
